assets/css/application.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

body {
  background-image: url("../c4m_2015_flyerbg_white70.png");
  background-color: #fdfdfd;
  background-position: center;
  background-repeat: repeat-y;
  margin: 0;
  padding: 0;
  font-family: 'Raleway', sans-serif;;
  }

#container {
  *zoom: 1;
  max-width: 60em;
  margin-left: auto;
  margin-right: auto;
  padding:10px; }
  #container a {
    color: #0D5781;}
  #container:before, #container:after {
    content: " ";
    display: table; }
  #container:after {
    clear: both; }
  #container #home {
    margin: 30px 0;
    margin-bottom: 0;
    box-shadow: 0 0 5px 3px #ccc;
    display: block;
    margin-right: 2.35765%;
    width: 100%;
    background: white;
    text-align: center;
    padding-top: 1px;}
    #container #home .nav {
      background: rgb(184, 219, 240);
      margin: 0;
      display: table;
      width: 100%;
    }
    #container #home .nav ul {
      display: table-cell;
      vertical-align: middle;
    }
    #container #home .nav ul li {
      display: inline-block;
      padding: 30px;
      cursor: pointer;
    }
    #container #home .nav ul li a {
      text-decoration: none;
    }
    #container #home .nav ul li:hover {
      background: rgb(133, 198, 238);
      display: inline-block;
      padding: 30px;
    }
    #container #home:last-child {
      margin-right: 0; }
    #container #home h1 {
      color: #063E5F;
      font-size: 4em;
      margin: 0.2em;
      margin-bottom: 0;
      font-family: 'Open Sans', sans-serif;
      font-weight: 600;
    }
    #container #home h2 {
      font-size:2.0em;
      font-family: 'Open Sans', sans-serif;
      font-weight: 600;
    }
    #container #home h3 {
      font-size:1.5em;
      padding-top: 0;
      font-family: 'Open Sans', sans-serif;
      font-weight: 600;
    }
    #container #home p {
      margin: 3px;
    }
    #container #home #intro {
      line-height: 1.6em;
      width: 90%;
      margin: 0 auto;
      text-align: left;}
    #container #home #intro #mapcontainer {
      position: relative;
    }
    #container #home #intro #mapcontainer span {
      position: absolute;
      top: 0px;
      left: 0px;
      padding: 2px;
    }
    #container #home #intro #mapcontainer #mapthumbnail {
      float:left;
      margin-right:5px;
    }
    #container #home #intro .twocolumn {
      display:inline-block;
      width:49%;
      vertical-align:top;
      padding-bottom: 15px;
    }
    #container #home #intro section {
      width: 80%;
    }
    #container #home #intro .track {
      border-radius: 255px;
      width: 255px;
      height: 255px;
      margin: 5px;
      padding: 25px 20px;
      color:#fff;}
    #container #home #intro .infos {
      text-align: center;
      margin:50px 0px 10px;
    }
    #container #home #intro .button {
      color: #0D5781;
      padding: 20px;
      font-size: 28px;
      font-weight: 700;
    }
    #container #home #intro .track h3 {
      font-size: 1.4em;
    }
    #container #home #intro .diy {
      background-color:#3BBBDA;
    }
    #container #home #intro .ho {
      background-color:#0D709A;
    }
    #container #home #intro .dj {
      background-color:#0D5781;
    }
  #container #mc_embed_signup {
    width: 100%;
    background: #a9c1d9;
    padding: 20px;
    margin: 20px 0;
    *zoom: 1; }
    #container #mc_embed_signup:before, #container #mc_embed_signup:after {
      content: " ";
      display: table; }
    #container #mc_embed_signup:after {
      clear: both; }
    #container #mc_embed_signup form {
      width: 80%;
      margin: 0 auto; }
      #container #mc_embed_signup form input#mce-EMAIL {
        float: left;
        padding: 5px;
        font-size: 1.2em;
        width: 60%;
        text-align: center; }
      #container #mc_embed_signup form input#mc-embedded-subscribe {
        float: left;
        padding: 7px;
        margin: 5px 10px;
        background: #607890;
        color: white;
        font-size: 1em;
        border: none;
        border-radius: 2px; }
  #container #tickets {
    padding: 20px;
    width: 100%;}
    #container #tickets h3 {
      text-align: center;
      text-transform: uppercase; }

div#footer {
  color: #0D5781;
  background: rgba(255, 255, 255, 1);
  padding: 0px;
  box-shadow: 0px 0px 5px 3px #CCC;
  text-align: center;
  margin-bottom: 25px;
  width:216px;
  margin-left:auto;
  margin-right:auto;
}
div#footer a {
  color: #0D5781;
}
.hidden {
  visibility: hidden;
}

